# china-policy-analyze-skill

./: .env.example  .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DATA_SOURCE_POLICY.md  DEPLOYMENT.md  DISCLAIMER.md  LEGAL_COMPLIANCE.md  LICENSE  PERSONAL_INFO_POLICY.md  README.md  REVIEW_GUIDELINES.md  SECURITY.md  SENSITIVE_CONTENT_POLICY.md  SOURCE_ADMISSION_RULES.md  TRADE_COMPLIANCE_BOUNDARY.md  gov_raw.html  pr_body.txt  pyproject.toml
config/: crawler_rules.yaml  economic_impact_indicators.yaml  geo_risk_indicators.yaml  github_pr_template.md  hermes_tasks.yaml  importance_rules.yaml  source_groups.yaml  sources.yaml  topic_taxonomy.yaml  wechat_accounts.yaml
corpus/: seed_manifest.yaml
docs/: hermes_agent_operating_manual.md  opencode_implementation_notes.md  policy_language_annotation_guide.md  source_expansion_audit_2026-06-25.md  source_maintenance_guide.md
eval/: citation_tests.yaml  forecast_calibration_tests.yaml  opportunity_analysis_tests.yaml  policy_language_tests.yaml  recency_tests.yaml  test_questions.yaml
reports/: daily_2026-05-02.md  daily_2026-05-03.md  daily_2026-05-04.md  daily_2026-05-05.md  daily_2026-05-06.md  daily_2026-05-07.md  daily_2026-05-08.md  daily_2026-05-09.md  daily_2026-05-10.md  daily_2026-05-11.md  daily_2026-05-12.md  daily_2026-05-13.md  daily_2026-05-14.md  daily_2026-05-15.md  daily_2026-05-16.md  daily_2026-05-17.md  daily_2026-05-18.md  daily_2026-05-19.md  daily_2026-05-20.md  daily_2026-05-21.md  daily_2026-05-22.md  daily_2026-05-23.md  daily_2026-05-24.md  daily_2026-05-25.md  daily_2026-05-26.md  daily_2026-05-27.md  daily_2026-05-28.md  daily_2026-05-29.md  daily_2026-05-30.md  daily_2026-05-31.md  daily_2026-06-01.md  daily_2026-06-02.md  daily_2026-06-03.md  daily_2026-06-04.md  daily_2026-06-05.md  daily_2026-06-06.md  daily_2026-06-07.md  daily_2026-06-08.md  daily_2026-06-09.md  (+88 more)
(+84 files in other folders)
